--- a/src/scss/custom/partials/_slider.scss
+++ b/src/scss/custom/partials/_slider.scss
@@ -16,9 +16,10 @@
     color: $primary;
     opacity: 1;
   }
-}
 
-.slick-list {
-  box-sizing: initial;
-  padding: 25px 0px;
+  // fix for unwanted box-shadow cut-off
+  &-list {
+    box-sizing: initial;
+    padding: 5px 0px;
+  }
 }
